[package]
name = "miniswap-task"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
postgres-types = { version = "0.2", features = ["derive"] }
serde_json = "1"
bb8 = "0.9"
bb8-postgres = "0.9"
chrono = "0.4"
rand = "0.9.2"
